tests/neg-custom-args/captures/unsound-reach-6.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/unsound-reach-6.scala:13:22 ------------------------------
13 |  val _: () -> Unit = x // error
   |                      ^
   |                      Found:    (x : () ->{ys*} Unit)
   |                      Required: () -> Unit
   |
   |                      Note that capability `ys*` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/unsound-reach-6.scala:21:22 ------------------------------
21 |  val _: () -> Unit = x // error
   |                      ^
   |                      Found:    (x : () ->{io} Unit)
   |                      Required: () -> Unit
   |
   |                      Note that capability `io` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/unsound-reach-6.scala:7:13 ----------------------------------------------------
7 |  println(xs.head) // error
  |          ^^^^^^^
  |          Local reach capability xs* leaks into capture scope of method f.
  |          You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/unsound-reach-6.scala:11:14 ---------------------------------------------------
11 |    val z = f(ys)   // error consume failure
   |              ^^
   |              Local reach capability ys* leaks into capture scope of method test.
   |              You could try to abstract the capabilities referred to by ys* in a capset variable.
